module 01 ready to upload

--- a/Module01/ex01/Makefile
+++ b/Module01/ex01/Makefile
@@ -1,6 +1,6 @@
 SRCS	= main.cpp Zombie.cpp ZombieHorde.cpp
 OBJS	= ${SRCS:.cpp=.o}
-NAME	= zombie
+NAME	= horde
 CC		= clang++
 RM		= rm -f
 CPPFLAGS	= -Wall -Werror -Wextra -std=c++98
